# alveo-video-analytics-demo

./: .ccls  .env  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  config.toml  docker-compose.yml  reset.sh  rtsp-simple-server.yml  start.sh  start_demo.sh  start_ml.sh  start_rtsp.sh  stop.sh
docker/: Dockerfile  build.sh  enter.sh  env.sh  run.sh  setup.sh
docker/files/: entrypoint.sh  yolov3_conf_threshold.patch
docker/grafana/: dashboard.json  grafana.ini
docker/grafana/datasource/: influxdb.json
install/: 0_downgrade_kernel.sh  1_install_software.sh  3_install_u30.sh  3_install_u55c.sh
scripts/: build.sh
src/: bcc.hpp  carclassification.hpp  color_palette.hpp  extract_objects.cpp  metrics.hpp  ml_server.cpp  tracker.hpp  video_server.cpp  yolo.hpp
src/ml/base/: inf_client.hpp  inf_dynamic_batching.hpp  inf_runner.hpp  inf_server.hpp
src/ml/bcc/: bcc_client.hpp  bcc_message.hpp  bcc_server.hpp
src/ml/carclassification/: carclassification_client.hpp  carclassification_message.hpp  carclassification_server.hpp
src/ml/utils/: vart_utils.hpp  xir_utils.hpp
src/ml/yolo_common/: ms_coco.hpp  voc.hpp  yolo_client.hpp  yolo_message.hpp
src/ml/yolov3/: yolov3_client.hpp  yolov3_message.hpp  yolov3_server.hpp
src/ml/yolov6/: yolov6_server.hpp
src/utils/: queue_mt.hpp  time_utils.hpp
src/video/: gst_app_bgr_utils.hpp  gst_app_utils.hpp  gst_pipeline_utils.hpp  hw_config.hpp  hw_config_base.hpp  hw_config_u30.hpp  hw_config_v70.hpp  rtsp_server.hpp
test/: test_bcc_server.cpp  test_carclassification_server.cpp  test_gst_pipeline_utils.cpp  test_influxdb.cpp  test_multi_scaler.cpp  test_multifilesrc.cpp  test_multiple_pipelines.cpp  test_rtsp_repeat.cpp  test_rtsp_repeat.sh  test_rtsp_server.cpp  test_rtsp_server.sh  test_rtspclientsink.cpp  test_rtspclientsink.sh  test_video_pipeline.cpp  test_yolov3.cpp  test_yolov3_batch.cpp  test_yolov3_server.cpp  test_yolov6_server.cpp
videos/: transcode.sh
